<resources>
    <string name="app_name">PetBionic</string>
    <string name="title_petbionic">🐾 PetBionic</string>
    <string name="subtitle_monitor">Canine Prosthesis Monitor</string>
    <string name="device_status_label">Device Status</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="state_idle">State: idle</string>
    <string name="state_sd_unknown">SD: -</string>
    <string name="state_imu_unknown">IMU: -</string>
    <string name="state_hx711_unknown">HX711: -</string>
    <string name="state_samples_unknown">Samples: -</string>
    <string name="state_time_sync_unknown">Time sync: -</string>
    <string name="action_connect">Connect to PetBionic</string>
    <string name="action_start">▶ Start</string>
    <string name="action_stop">⏹ Stop</string>
    <string name="action_configure_wifi">⚙ Configure WiFi</string>
    <string name="action_session_history">📋 Session History</string>
    <string name="action_send_session">☁ Send Last Session</string>
    <string name="title_session_history">Session History</string>
    <string name="title_force_over_time">Force over Time</string>
    <string name="title_accel_over_time">Acceleration over Time</string>
</resources>